[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"  # For environment variable management
chrono = "0.4"
rand = "0.8"